# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
page_loader/: __init__.py  assets.py  html.py  io.py  logging.py  page_loader.py  path.py  url.py
page_loader/io/: file.py  web.py
page_loader/scripts/: download_page.py
tests/: file.py  fixtures_paths.py  test_page_loader.py
tests/fixtures/: nested.html  simple.html  simple_with_local_urls.html  simple_with_resources.html
