[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Command-line application for downloading web pages with resources"
authors = ["Igor Aukhadeev"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
funcy = "^1.16"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
isort = "^5.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.download_page:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
